<resources>
    <string name="app_name">Inventory App</string>
    <string name="String_home">Home</string>
    <string name="action_save_recipes">Action Save</string>
    <string name="delete_recipe">Delete Product</string>

    <!--Displays text for the possible beer colors-->
    <string name="color_unknown">Unknown</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_amber">Amber</string>
    <string name="color_brown">Brown</string>
    <string name="color_black">Black</string>

    <!--Displays text for the possible beer types-->
    <string name="beer_type_unknown">Unknown</string>
    <string name="beer_type_ale">Ale</string>
    <string name="beer_type_pale_ale">Pale Ale</string>
    <string name="beer_type_lager">Lager</string>
    <string name="beer_type_Stout">Stout</string>
    <string name="beer_type_indianpale_ale">Indian Pale Ale</string>
    <string name="beer_type_porter">Porter</string>

    <!--Displays text for floating button reading "Add Product" -->
    <string name="floating_button_recipe">Add Product</string>

    <!--Displays empty title text to user when no items populate ListView-->
    <string name="empty_title_text">Let\'s fill up that beer!</string>

    <!--Displays empty subtitle to user explaining how to get started when ListView is empty-->
    <string name="empty_subtitle_text">Start by adding a product to your inventory...</string>

    <!--Displays app bar title to "Add a Product" when user is making new inventory entry-->
    <string name="app_bar_title_add_product">Add a Product</string>

    <!--Displays app bar title to "Edit Product" when user is updating existing entry-->
    <string name="app_bar_edit_product">Edit a Product</string>

    <!--Displays failed to insert product message to user when product failed to be saved-->
    <string name="failed_to_insert">Sorry, failed to insert beer product</string>

    <!--Displays successful insert message to user when product is saved-->
    <string name="successful_insert">Product Saved!</string>

    <!--Displays error message to user when an error occurs while updating an existing entry-->
    <string name="error_occured_updating">Sorry! An error occurred while updating inventory</string>

    <!--Displays message to user when updating existing entry is successful-->
    <string name="successful_update">Product has been updated</string>

    <!--Displays message to user when trying to back out in the middle
     of updating an existing entry-->
    <string name="discard_changes">Discard changes and quit editing?</string>

    <!--Displays "Discard" menu option for the user to confirm or deny when exiting mid update-->
    <string name="discard_option">Discard</string>

    <!--Displays "Continue Editing" for the user to confirm or deny when exiting mid update-->
    <string name="continuing_edit_option">Continue Editing</string>

    <!--Displays message to user to confirm or deny prior to deleting entry entirely-->
    <string name="are_you_sure_delete_message">Are you sure you would like to delete this product?
    </string>

    <!--Displays the "Delete" option for the user to confirm or deny prior to deleting entry-->
    <string name="delete_option">Delete</string>

    <!--Displays the "Cancel" option for the user to confirm or deny prior to deleting entry-->
    <string name="cancel_delete_option">Cancel</string>

    <!--Displays Toast message to user when an error occurs with deleting a product entry-->
    <string name="error_deleting_product">Error with deleting product</string>

    <!--Displays Toast message to the user when product was successfully deleted
    within the inventory-->
    <string name="product_deleted_toast">Product Deleted</string>

    <!--Displays the splash screen title-->
    <string name="dreadnaught_brewing_splash_title">Dreadnought Brewing</string>

    <!--Displays the "Overview" input field-->
    <string name="overview_field_title">Overview</string>

    <!--Displays hint to the user when prompting for the product name-->
    <string name="name_of_beer_editText_hint">Name of Beer Product</string>

    <!--Displays the "Color" input field title-->
    <string name="product_color_field_title">Product Color</string>

    <!--Displays the "ABV" input field title-->
    <string name="abv_alcohol_by_volume_field_title">ABV : (Alcohol By Volume)</string>

    <!--Displays the ABV hint to the user-->
    <string name="volume_edit_text_hint">Volume %</string>

    <!--Displays the "Type of beer" input field title-->
    <string name="type_of_beer_field_title">Type of Beer</string>

    <!--Displays the "Price per gallon" input field title-->
    <string name="price_per_gallon_field_title">Price Per Gallon</string>

    <!--Displays the "Price" hint to the user-->
    <string name="_0_00_edit_text_hint">$ 0.00</string>

    <!--Displays the "Quantity" input field title-->
    <string name="available_quantity_field_title">Available Quantity</string>

    <!--Displays the "Quantity" hint to the user-->
    <string name="_0_00_quantity_edit_text_hint">0.00</string>

    <!--Displays the "Product Description" input field title-->
    <string name="product_description_field_title">Product Description:</string>

    <!--Displays the product description hint to the user-->
    <string name="product_description_here_edit_text_hint">Please enter your product
        description here....</string>

    <!--Suppliers email address-->
    <string name="supplier_email">commercial.orders@theyeastbay.com</string>

    <!--Contains the email subject line-->
    <string name="email_subject_line">Place Order For Product: Dreadnought Brewery</string>

    <!--Contains the email body to supplier-->
    <string name="email_text_body">If there are any issues or you have questions regarding our
        order, please contact us with the info provided below.</string>

    <!--Contains email signature-->
    <string name="email_text_ending_signature">Thank you and have a great day,</string>

    <!--Contains the name of the ordering party-->
    <string name="email_text_signature_name">Team Dreadnought</string>

    <!--Contains the phone number for ordering recipient-->
    <string name="email_contact_phone">Direct: (360)-794-8875</string>

    <!--Contains the email for ordering recipient-->
    <string name="email_contact_email">Email: dreadnoughtbrew@brewmaster.com</string>

    <!--Displays Dreadnoughts current Quantity in stock to the supplier-->
    <string name="email_text_quantity">Dreadnought\'s Current Stock:</string>

    <!--Displays ordering recipients name-->
    <string name="email_text_product_order_with_name">Place Order For:</string>

    <!--Displays text for submit order button within the inventory_editor layout-->
    <string name="submit_order_button">Submit Order</string>

    <!--Displays title "Product Description" within the list_item layout-->
    <string name="product_description_list_item">Product Description:</string>

    <!--Displays text for the sold button within the list_item layout-->
    <string name="sold_button">-Sold</string>

    <!--Displays text for the restock button within the list_item layout-->
    <string name="restock_button">+Restock</string>

    <!--Displays the title "Quantity" within the list_item layout-->
    <string name="quantity_list_item">Quantity:</string>

    <!--Displays the title "Price" within the list_item layout-->
    <string name="price_list_item">Price:</string>

    <!--Displays the title "Product Name" within the list_item layout-->
    <string name="product_name_list_item">Product Name</string>

    <!--Displays insert dummy data menu option-->
    <string name="insert_test_data_menu">Insert Test Data</string>

    <!--Displays delete all entries for the menu option-->
    <string name="delete_all_entries_menu">Delete All Entries</string>

</resources>
