<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECEFF1">

    <LinearLayout
        android:id="@+id/activity_recipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ECEFF1"
        android:orientation="vertical"
        android:padding="14dp"
        tools:context="com.example.ammei.inventory.Inventory_Editor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CatalogFieldStyle"
                android:text="@string/overview_field_title" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/beerName"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/name_of_beer_editText_hint"
                    android:inputType="textCapWords" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/colorView"
                style="@style/CatalogFieldStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_color_field_title" />

            <!-- Input field -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Expected coloring drop down menu -->
                <Spinner
                    android:id="@+id/Color_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingRight="8dp"
                    android:spinnerMode="dropdown" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/abv_textView"
                style="@style/CatalogFieldStyle"
                android:padding="2dp"
                android:text="@string/abv_alcohol_by_volume_field_title" />

            <EditText
                android:id="@+id/abv_editText"
                style="@style/EditorFieldStyle"
                android:layout_marginLeft="12dp"
                android:hint="@string/volume_edit_text_hint"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                style="@style/CatalogFieldStyle"
                android:text="@string/type_of_beer_field_title" />

            <!-- Input field -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Expected coloring drop down menu -->
                <Spinner
                    android:id="@+id/beerType_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingRight="16dp"
                    android:spinnerMode="dropdown" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/priceView"
                style="@style/CatalogFieldStyle"
                android:text="@string/price_per_gallon_field_title" />

            <EditText
                android:id="@+id/priceEditText"
                style="@style/EditorFieldStyle"
                android:layout_marginLeft="12dp"
                android:hint="@string/_0_00_edit_text_hint"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/quantityView"
                style="@style/CatalogFieldStyle"
                android:text="@string/available_quantity_field_title" />

            <EditText
                android:id="@+id/quantityEditText"
                style="@style/EditorFieldStyle"
                android:layout_marginLeft="12dp"
                android:hint="@string/_0_00_quantity_edit_text_hint"
                android:inputType="numberDecimal" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/RecipeCatalogFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_description_field_title"
                android:textSize="24sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/enterDescription"
                style="@style/EditorFieldStyle"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:hint="@string/product_description_here_edit_text_hint"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:scrollbars="vertical"
                android:textStyle="italic" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>