<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/productName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/product_name_list_item"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/listItemInputTitleColor"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/price_list_item"
            android:textColor="@color/listItemInputTitleColor" />

        <TextView
            android:id="@+id/productPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:fontFamily="sans-serif"
            android:text="22 "
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#707375" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/quantity_list_item"
            android:textColor="@color/listItemInputTitleColor" />

        <TextView
            android:id="@+id/productQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="8 "
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#707375" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/restockButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/soldButton"
                android:layout_toStartOf="@+id/soldButton"
                android:background="@color/buttonBackgroundColor"
                android:focusable="false"
                android:text="@string/restock_button"
                android:textColor="@color/textAccentColor"
                android:textStyle="italic" />

            <Button
                android:id="@+id/soldButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="6dp"
                android:background="@color/buttonBackgroundColor"
                android:focusable="false"
                android:text="@string/sold_button"
                android:textColor="@color/textAccentColor"
                android:textStyle="italic" />

        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/product_description_list_item"
        android:textColor="@color/listItemInputTitleColor"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/productDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#AEB6BD" />

</LinearLayout>