<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_catalog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ammei.inventory.Inventory_Activity">

    <ImageView
        android:id="@+id/home_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/home_beer" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <RelativeLayout
        android:id="@+id/emptyView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <ImageView
            android:id="@+id/empty_beer_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/empty_title"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/empty_title"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/empty_beer" />

        <TextView
            android:id="@+id/empty_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_beer_image"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:paddingTop="12dp"
            android:text="@string/empty_title_text"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#ffc68c" />

        <TextView
            android:id="@+id/empty_subTitle_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_title"
            android:layout_centerHorizontal="true"
            android:text="@string/empty_subtitle_text"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <TextView
        android:id="@+id/addProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="36dp"
        android:layout_marginEnd="118dp"
        android:layout_marginRight="118dp"
        android:fontFamily="cursive"
        android:paddingLeft="16dp"
        android:text="@string/floating_button_recipe"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        android:textStyle="bold" />

</RelativeLayout>